--- a/views/index.jade
+++ b/views/index.jade
@@ -39,19 +39,14 @@ html(lang='en', manifest='cache.manifest')
     script(src='js/jquery-1.10.2.min.js', type='text/javascript')
     script(src='js/jquery.hammer.min.js', type='text/javascript')
     //
-      Google Analytics
-      <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-28993174-1']);
-      _gaq.push(['_setDomainName', 'pacman.platzh1rsch.ch']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-      </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110171790-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-110171790-2');
+    </script>
   body
     input(type='hidden', name='_csrf', value='#{csrfToken}')
     .container
