--- a/views/index.jade
+++ b/views/index.jade
@@ -38,15 +38,12 @@ html(lang='en', manifest='cache.manifest')
     // Script
     script(src='js/jquery-1.10.2.min.js', type='text/javascript')
     script(src='js/jquery.hammer.min.js', type='text/javascript')
-    //
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110171790-2"></script>
-    <script>
+    script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-110171790-2')
+    script.
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-110171790-2');
-    </script>
   body
     input(type='hidden', name='_csrf', value='#{csrfToken}')
     .container
