--- a/views/index.jade
+++ b/views/index.jade
@@ -8,18 +8,18 @@ html(lang='en', manifest='cache.manifest')
     link(rel='manifest', href='manifest.json')
     // SEO Stuff
     meta(name='description', content='Play Pacman Canvas for free on your desktop or mobile and earn STEEM cryptocurrency. This whole game is open source an was created in HTML5.')
-    link(rel='canonical', href='http://pacman.platzh1rsch.ch/')
-    meta(name='author', content='platzh1rsch.ch')
-    meta(name='publisher', content='platzh1rsch.ch')
-    meta(name='copyright', content='© Copyright (c) platzh1rsch.ch')
+    link(rel='canonical', href='https://pacman.steemliberator.com/')
+    meta(name='author', content='steemliberator.com')
+    meta(name='publisher', content='steemliberator.com')
+    meta(name='copyright', content='© Copyright (c) steemliberator.com')
     meta(name='robots', content='index,follow')
     meta(http-equiv='content-language', content='de')
     meta(name='language', content='de')
     meta(name='page-topic', content='Games/Arcade')
     meta(content='National', name='distribution')
-    meta(content='pacman.platzh1rsch.ch', name='target')
+    meta(content='pacman.steemliberator.com', name='target')
     // Facebook Open Graph Information
-    meta(property='og:image', content='http://pacman.platzh1rsch.ch/img/Icon-200x200.png')
+    meta(property='og:image', content='https://pacman.steemliberator.com/img/Icon-200x200.png')
     meta(property='og:title', content='Pacman Canvas in HTML5')
     meta(property='og:description', content='Play Pacman Canvas for free on your desktop or mobile and earn STEEM cryptocurrency. This whole game is open source an was created in HTML5.')
     meta(property='og:url', content='https://pacman.steemliberator.com/')
@@ -141,7 +141,7 @@ html(lang='en', manifest='cache.manifest')
               img(src='img/pacman8bit.jpg')
             p
               | Steem Pacman was originally, written by 
-              a(href='http://platzh1rsch.ch') platzh1rsch
+              a(href='http://steemliberator.com') platzh1rsch
               | . You can get the code on 
               a(target='_blank', href='https://github.com/platzhersh/pacman-canvas') github
               | .
@@ -199,7 +199,7 @@ html(lang='en', manifest='cache.manifest')
               | , which is a really great site to learn Javascript and also other languages.
             p
               | If you understand German you can also read my blogpost about this site: 
-              a(href='http://blog.platzh1rsch.ch/2012/08/pacman-in-html5-canvas.html') "Pacman in HTML5 Canvas"
+              a(href='http://blog.steemliberator.com/2012/08/pacman-in-html5-canvas.html') "Pacman in HTML5 Canvas"
               | .
             span#audio
               audio#theme(preload='auto')
